Capitalize 1st Letter only

--- a/flaskstarter/templates/frontend/contact_us.html
+++ b/flaskstarter/templates/frontend/contact_us.html
@@ -1,13 +1,13 @@
 {% from "macros/_form.html" import render_form %}
 
-{% set page_title = 'Contact Us' %}
+{% set page_title = 'Contact us' %}
 
 {% extends 'layouts/base.html' %}
 
 {% block body %}
 <div class="d-flex flex-column justify-content-center" id="banner">
   <div id="projectAim0" class="d-flex justify-content-center">
-    <h1>CONTACT US</h1>
+    <h1>Contact us</h1>
   </div>
   <div id="projectDisp" class="d-flex justify-content-center">
     <h5 class="text-center">For enquiries, comments or collaboration opportunities, <br>
@@ -18,24 +18,24 @@
   <div class="contactboard">
     <div class="contact-row">
       <div class="contact-item">
-        <h2>TEL</h2>
+        <h2>Tel</h2>
         <hr>
         <p>+852 3910 3800</p>
       </div>
       <div class="contact-item">
-        <h2>FAX</h2>
+        <h2>Fax</h2>
         <hr>
         <p>+852 2793 3233</p>
       </div>
       <div class="contact-item">
-        <h2>EMAIL</h2>
+        <h2>Email</h2>
         <hr>
         <p>covidscope@gmail.com</p>
       </div>
     </div>
     <div class="contact-row">
       <div class="contact-item">
-        <h2>ADDRESS</h2>
+        <h2>Address</h2>
         <hr>
         <p>Units 1201-1206, 1223 & 1225, 12/F, Building 19W, 19 Science Park West Avenue, <br>Hong Kong Science Park,
           Pak Shek Kok, New Territories, Hong Kong.</p>
