--- a/flaskstarter/templates/layouts/banner.html
+++ b/flaskstarter/templates/layouts/banner.html
@@ -6,19 +6,19 @@
     </div>
     <div id="projectAim0" class="d-flex justify-content-center">
         <div class="typed-strings">
-            <h1>Explore Single-Cell Immunology</h1>
+            <h1>Explore single-cell immunology</h1>
         </div>
         <span class="typed"></span>
     </div>
     <div id="projectAim1" class="d-flex justify-content-center projectAim">
         <div class="typed-strings2">
-            <h1>of SARS-CoV-2 Infection</h1>
+            <h1>of SARS-CoV-2 infection</h1>
         </div>
         <span class="typed2"></span>
     </div>
     <div id="projectDisp" class="d-flex justify-content-center">
         <div class="typed-strings">
-            <h5><strong>Continuously Updated | Standardized | Download-ready | Open Datasets</strong></h5>
+            <h5><strong>Continuously updated | Standardized | Download-ready | Open datasets</strong></h5>
         </div>
         <span class="typed"></span>
     </div>
@@ -52,7 +52,7 @@
             <div class="item2">
                 <h2>Sep, 2022</h2>
             </div>
-            <div class="item3">Data Date Processed</div>
+            <div class="item3">Data date processed</div>
         </div>
     </div>
 
