--- a/flaskstarter/templates/layouts/base.html
+++ b/flaskstarter/templates/layouts/base.html
@@ -39,7 +39,7 @@
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-light static-top" style="background: #F7F8F8;">
     <div class="container">
-      <a class="navbar-brand" href="{{ url_for('tasks.table_view') }}"><img
+      <a class="navbar-brand" href="{{ url_for('tasks.table_view') }}" style="margin-left: -18px"><img
           src="{{url_for('static', filename='D24H_Logo.png')}}" width="273" height="129" /></a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive"
         aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
