--- a/flaskstarter/templates/layouts/footer.html
+++ b/flaskstarter/templates/layouts/footer.html
@@ -4,7 +4,7 @@
             <div class="col-12 col-lg-3 justify-content-start" style="padding:0px;">
                 <a class="navbar-brand" href="{{ url_for('frontend.index') }}"><img
                         src="{{url_for('static', filename='D24H_Logo.png')}}" width="273" height="129"
-                        style="margin:-20px -20px 0px 0px;" /></a>
+                        style="margin:-20px 0px 0px -38px;" /></a>
             </div>
             <div class="col-lg-6 d-none d-lg-block justify-content-start" style="padding:0px 60px 0px 60px;">
                 <div class="row" style="margin: 0px; padding:12px 0px 0px 0px;">
@@ -52,25 +52,25 @@
                             src="{{url_for('static', filename='vimeo.svg')}}" width="20" height="20" /></a>
                 </div>
             </div>
-            <div class="col-lg-3 d-none d-lg-block d-xl-block justify-content-start" style="padding:0px 0px 0px 60px;">
-                <div class="row" style="margin: 15px 0px 30px 0px; padding:0px;">
+            <div class="col-lg-3 d-none d-lg-block d-xl-block justify-content-end" style="padding:0px 0px 0px 60px;">
+                <div class="row justify-content-end" style="margin: 15px 0px 30px 0px; padding:0px">
                     <div class="mediumauto18"><a href="{{ url_for('tasks.table_view') }}"
-                            style="color: hsla(169, 91%, 17%, 1)">EXPLORE DATA</a></div>
+                            style="color: hsla(169, 91%, 17%, 1)">Explore</a></div>
                 </div>
-                <div class=" row" style="margin: 30px 0px; padding:0px;">
+                <div class="row justify-content-end" style="margin: 30px 0px; padding:0px;">
                     <div class="mediumauto18" style="color: hsla(169, 91%, 17%, 1)"><a
                             href="{{ url_for('tasks.contribute') }}"
-                            style="color: hsla(169, 91%, 17%, 1)">CONTRIBUTE</a></div>
+                            style="color: hsla(169, 91%, 17%, 1)">Contribute</a></div>
                 </div>
-                <div class="row" style="margin: 30px 0px; padding:0px;">
+                <div class="row justify-content-end" style="margin: 30px 0px; padding:0px;">
                     <div class="mediumauto18" style="color: hsla(169, 91%, 17%, 1)"><a
-                            href="{{ url_for('frontend.tutorial') }}" style="color: hsla(169, 91%, 17%, 1)">TUTORIAL</a>
+                            href="{{ url_for('frontend.tutorial') }}" style="color: hsla(169, 91%, 17%, 1)">Tutorial</a>
                     </div>
                 </div>
-                <div class="row" style="margin: 30px 0px; padding:0px;">
+                <div class="row justify-content-end" style="margin: 30px 0px; padding:0px;">
                     <div class="mediumauto18" style="color: hsla(169, 91%, 17%, 1)"><a
-                            href="{{ url_for('frontend.contact_us') }}" style="color: hsla(169, 91%, 17%, 1)">CONTACT
-                            US</a></div>
+                            href="{{ url_for('frontend.contact_us') }}" style="color: hsla(169, 91%, 17%, 1)">Contact
+                            us</a></div>
                 </div>
             </div>
         </div>
