--- a/flaskstarter/static/css/template.css
+++ b/flaskstarter/static/css/template.css
@@ -44,7 +44,6 @@ a {
     font-weight: 700;
     font-size: 48px;
     line-height: 58px;
-    text-transform: capitalize;
     text-align: left;
     margin-bottom: 15px;
     color: #045547;
@@ -56,7 +55,6 @@ a {
     font-weight: 700;
     font-size: 36px;
     line-height: 44px;
-    text-transform: capitalize;
     text-align: left;
     color: #045547;
 }
@@ -67,7 +65,6 @@ a {
     font-weight: 700;
     font-size: 22px;
     line-height: 30px;
-    text-transform: capitalize;
     color: #045547;
 }
 
@@ -197,14 +194,15 @@ a {
 
 #navbarResponsive {
     padding-top: 45px;
+    margin-right: -20px;
 }
 
 .navbar-nav .nav-item .nav-link {
     font-family: 'Inter';
     font-style: normal;
     font-weight: 700;
-    font-size: 22px;
-    line-height: 24px;
+    font-size: 21px;
+    line-height: 23px;
     color: #066453;
     padding: 12px;
 }
