--- a/flaskstarter/templates/tasks/landing.html
+++ b/flaskstarter/templates/tasks/landing.html
@@ -8,8 +8,8 @@
       <div id="map" style="height: 45vh"></div>
     </div>
     <div class="col-4">
-      <div class="boldauto64">Dataset Distribution</div>
-      <div class="regularH160">Our dataset covers data of Single-Cell Immunology Of SARS-CoV-2 Infection from China,
+      <div class="boldauto64">Dataset distribution</div>
+      <div class="regularH160">Our dataset covers data of single-cell immunology Of SARS-CoV-2 infection from China,
         Europe, America and ... You may click the region on the map to check the data.</div>
       <div class="d-flex">
         <a class="exploreButton" href="{{ url_for('tasks.table_view') }}">
@@ -25,7 +25,7 @@
   <div class="container">
     <div class="row">
       <div class="col-4" style="padding-top: 50px;">
-        <div class="boldauto64">Cell Type Distribution</div>
+        <div class="boldauto64">Cell type distribution</div>
         <div class="regularH160">We have gathered data of multivarious cell types, including CD4 T, CD14 Mono, Nk, etc.
           You may explore more and generate scFeature/ UMAP graph on our Explore page.</div>
         <div class="d-flex">
@@ -298,9 +298,6 @@
       }
       objs.push(obj)
     }
-
-
-
   }
 
   polygonSeries.data = objs;
