--- a/flaskstarter/templates/layouts/footer.html
+++ b/flaskstarter/templates/layouts/footer.html
@@ -76,13 +76,11 @@
         </div>
         <div class="row justify-content-between" style="margin: 50px 0px 0px 0px; color: #173533 !important;">
             <div>
-                <p>Copyright © 2022 Laboratory of Data Discovery for Health (D²4H). All Rights Reserved.</p>
+                <p>Copyright © 2022 Laboratory of Data Discovery for Health (D²4H). All rights reserved.</p>
             </div>
             <div>
                 <p><a class="link" href="https://www.d24h.hk/disclaimer-and-privacy-policy/"
-                        style="color: #1CA68C !important;">Disclaimer and
-                        Privacy
-                        Policy</a></p>
+                        style="color: #1CA68C !important;">Disclaimer and Privacy Policy</a></p>
             </div>
         </div>
 
