--- a/flaskstarter/templates/layouts/banner.html
+++ b/flaskstarter/templates/layouts/banner.html
@@ -4,13 +4,13 @@
     <div id="projectName" class="d-flex justify-content-center">
         <h4>COVID<span>SCOPE</span></h4>
     </div>
-    <div id="projectAim0" class="d-flex justify-content-center">
+    <div class="d-flex justify-content-center boldH72">
         <div class="typed-strings">
             <h1>Explore single-cell immunology</h1>
         </div>
         <span class="typed"></span>
     </div>
-    <div id="projectAim1" class="d-flex justify-content-center projectAim">
+    <div class="d-flex justify-content-center boldH72">
         <div class="typed-strings2">
             <h1>of SARS-CoV-2 infection</h1>
         </div>
