meta plot 2 columns a row for large Mon

--- a/flaskstarter/templates/tasks/show_search_plot.html
+++ b/flaskstarter/templates/tasks/show_search_plot.html
@@ -6,45 +6,63 @@
 
 {% block body %}
 
-<div class="section03">
+<div class="section03" style="padding-top:0px;">
   <div class="container" style="margin:0px; padding: 0px;">
-    <div class="row justify-content-center">
-      <div class="boldauto36">Cell Type Proportion</div>
-    </div>
-    <div class="row justify-content-center" style="padding-top: 30px">
-      <div id="chart" class="chart"></div>
+    <div class="row">
+      <div class="col-lg justify-content-center">
+        <div class="row justify-content-center" style="padding-top: 100px">
+          <div class="boldauto36">Cell Type Proportion</div>
+        </div>
+        <div class="row justify-content-center" style="padding-top: 30px">
+          <div id="chart" class="chart"></div>
+        </div>
+      </div>
+      <div class="col-lg justify-content-center">
+        <div class="row justify-content-center" style="padding-top: 100px">
+          <div class="boldauto36">Severity Proportion</div>
+        </div>
+        <div class="row justify-content-center" style="padding-top: 30px">
+          <div id="chart2" class="chart"></div>
+        </div>
+      </div>
     </div>
 
-    <div class="row justify-content-center" style="padding-top: 100px">
-      <div class="boldauto36">Severity Proportion</div>
-    </div>
-    <div class="row justify-content-center" style="padding-top: 30px">
-      <div id="chart2" class="chart"></div>
+    <div class="row">
+      <div class="col-lg justify-content-center">
+        <div class="row justify-content-center" style="padding-top: 100px">
+          <div class="boldauto36">Outcome Proportion</div>
+        </div>
+        <div class="row justify-content-center" style="padding-top: 30px">
+          <div id="chart3" class="chart"></div>
+        </div>
+      </div>
+      <div class="col-lg justify-content-center">
+        <div class="row justify-content-center" style="padding-top: 100px">
+          <div class="boldauto36">Gender Proportion</div>
+        </div>
+        <div class="row justify-content-center" style="padding-top: 30px">
+          <div id="chart6" class="chart"></div>
+        </div>
+      </div>
     </div>
 
-    <div class="row justify-content-center" style="padding-top: 100px">
-      <div class="boldauto36">Outcome Proportion</div>
-    </div>
-    <div class="row justify-content-center" style="padding-top: 30px">
-      <div id="chart3" class="chart"></div>
-    </div>
-    <div class="row justify-content-center" style="padding-top: 100px">
-      <div class="boldauto36">Gender Proportion</div>
-    </div>
-    <div class="row justify-content-center" style="padding-top: 30px">
-      <div id="chart6" class="chart"></div>
-    </div>
-    <div class="row justify-content-center" style="padding-top: 100px">
-      <div class="boldauto36">Age Proportion</div>
-    </div>
-    <div class="row justify-content-center" style="padding-top: 30px">
-      <div id="chart4" class="chart"></div>
-    </div>
-    <div class="row justify-content-center" style="padding-top: 100px">
-      <div class="boldauto36">Symptoms Proportion</div>
-    </div>
-    <div class="row justify-content-center" style="padding-top: 30px">
-      <div id="chart5" class="chart"></div>
+    <div class="row">
+      <div class="col-lg justify-content-center">
+        <div class="row justify-content-center" style="padding-top: 100px">
+          <div class="boldauto36">Age Proportion</div>
+        </div>
+        <div class="row justify-content-center" style="padding-top: 30px">
+          <div id="chart4" class="chart"></div>
+        </div>
+      </div>
+      <div class="col-lg justify-content-center">
+        <div class="row justify-content-center" style="padding-top: 100px">
+          <div class="boldauto36">Symptoms Proportion</div>
+        </div>
+        <div class="row justify-content-center" style="padding-top: 30px">
+          <div id="chart5" class="chart"></div>
+        </div>
+      </div>
     </div>
   </div>
 </div>
