--- a/flaskstarter/templates/tasks/show_search_plot.html
+++ b/flaskstarter/templates/tasks/show_search_plot.html
@@ -1,6 +1,6 @@
 {% from "macros/_form.html" import render_form %}
 
-{% set page_title = 'ScFeature' %}
+{% set page_title = 'Cell count meta' %}
 
 {% extends 'layouts/base.html' %}
 
@@ -13,7 +13,7 @@
         <div class="row justify-content-center" style="padding-top: 100px">
           <div class="boldauto36">Cell Type Proportion</div>
         </div>
-        <div class="row justify-content-center" style="padding-top: 30px">
+        <div class="row justify-content-center">
           <div id="chart" class="chart"></div>
         </div>
       </div>
@@ -21,7 +21,7 @@
         <div class="row justify-content-center" style="padding-top: 100px">
           <div class="boldauto36">Severity Proportion</div>
         </div>
-        <div class="row justify-content-center" style="padding-top: 30px">
+        <div class="row justify-content-center">
           <div id="chart2" class="chart"></div>
         </div>
       </div>
@@ -32,7 +32,7 @@
         <div class="row justify-content-center" style="padding-top: 100px">
           <div class="boldauto36">Outcome Proportion</div>
         </div>
-        <div class="row justify-content-center" style="padding-top: 30px">
+        <div class="row justify-content-center">
           <div id="chart3" class="chart"></div>
         </div>
       </div>
@@ -40,7 +40,7 @@
         <div class="row justify-content-center" style="padding-top: 100px">
           <div class="boldauto36">Gender Proportion</div>
         </div>
-        <div class="row justify-content-center" style="padding-top: 30px">
+        <div class="row justify-content-center">
           <div id="chart6" class="chart"></div>
         </div>
       </div>
@@ -51,7 +51,7 @@
         <div class="row justify-content-center" style="padding-top: 100px">
           <div class="boldauto36">Age Proportion</div>
         </div>
-        <div class="row justify-content-center" style="padding-top: 30px">
+        <div class="row justify-content-center">
           <div id="chart4" class="chart"></div>
         </div>
       </div>
@@ -59,7 +59,7 @@
         <div class="row justify-content-center" style="padding-top: 100px">
           <div class="boldauto36">Symptoms Proportion</div>
         </div>
-        <div class="row justify-content-center" style="padding-top: 30px">
+        <div class="row justify-content-center">
           <div id="chart5" class="chart"></div>
         </div>
       </div>
