--- a/flaskstarter/templates/layouts/banner.html
+++ b/flaskstarter/templates/layouts/banner.html
@@ -2,7 +2,7 @@
 
 <div class="d-flex flex-column justify-content-center" id="banner">
     <div id="projectName" class="d-flex justify-content-center">
-        <h4>COVID<span>SCOPE</span></h4>
+        COVID<span>SCOPE</span>
     </div>
     <div class="d-flex justify-content-center boldH72">
         <div class="typed-strings">
@@ -16,9 +16,9 @@
         </div>
         <span class="typed2"></span>
     </div>
-    <div id="projectDisp" class="d-flex justify-content-center">
+    <div class="d-flex justify-content-center lightS18" style="margin-top: 40px;">
         <div class="typed-strings">
-            <h5><strong>Continuously updated | Standardized | Download-ready | Open datasets</strong></h5>
+            Continuously updated | Standardized | Download-ready | Open datasets
         </div>
         <span class="typed"></span>
     </div>
