--- a/flaskstarter/templates/layouts/footer.html
+++ b/flaskstarter/templates/layouts/footer.html
@@ -80,7 +80,7 @@
             </div>
             <div>
                 <p><a class="link" href="https://www.d24h.hk/disclaimer-and-privacy-policy/"
-                        style="color: #1CA68C !important;">Disclaimer and Privacy Policy</a></p>
+                        style="color: #1CA68C !important;">Disclaimer and privacy policy</a></p>
             </div>
         </div>
 
