--- a/flaskstarter/templates/tasks/landing.html
+++ b/flaskstarter/templates/tasks/landing.html
@@ -56,7 +56,7 @@
             <th>Number of samples</th>
             <th>Number of cells</th>
             <th>Country</th>
-            <th>Published_Date</th>
+            <th>Published date</th>
             <th>Journal</th>
             <th>Link</th>
           </tr>
@@ -117,11 +117,11 @@
           </td>
           <td></td>
           <td>
-            <p>Expore data</p>
+            <p>Explore data</p>
           </td>
           <td></td>
           <td>
-            <p>Download and Citation</p>
+            <p>Download and citation</p>
           </td>
         </tr>
       </table>
