--- a/flaskstarter/templates/tasks/table_view.html
+++ b/flaskstarter/templates/tasks/table_view.html
@@ -109,11 +109,11 @@
         </div>
 
         <div class="row justify-content-start" style="margin-top: 24px;">
-            <div><input type="button" class="darkButton" style="display:inline-block;" value="Filter Search"
+            <div><input type="button" class="darkButton" style="display:inline-block;" value="Filter search"
                     id="btnSearch" />
             </div>
             <div><input type="button" class="lightButton" style="display:inline-block; margin-left: 15px;"
-                    value="Clear Filter" id="btnClear" /></div>
+                    value="Clear filter" id="btnClear" /></div>
         </div>
         <div class="row justify-content-end" style="margin: 24px -15px 0px 0px;">
             <form id="scfform" action="{{ url_for('tasks.show_scfeature')}}" method="post" style="display:inline-block">
@@ -139,7 +139,7 @@
             <div style="margin-top: 10px;">
                 <button class="lightButton" name="show_plot" type="submit"
                     style="display:inline-block; margin-right: 15px;" onclick="showplot()"
-                    title='Select 1 Cell Type & Search before clicking this button'> Show UMAP Plot
+                    title='Select 1 Cell Type & Search before clicking this button'> Show UMAP plot
                 </button>
             </div>
         </div>
@@ -231,7 +231,7 @@
                                     </div>
                                 </li>
                                 <li>
-                                    Press "Search" button.
+                                    Press "Filter search" button.
                                 </li>
                                 <li>Press "Show scFeature plot" to generate scFeature plot.</li>
                             </ol>
@@ -335,9 +335,9 @@
 
     $(document).ready(function () {
 
-        $(function(){$('.download').click(function() { ShowDownloadMessage(); }); })
+        $(function () { $('.download').click(function () { ShowDownloadMessage(); }); })
 
-        
+
         $("#downloadMatrix").on('submit', function (e) {
             var entrieString = $('#empTable_info').text();
             var entries = entrieString.split('of ').pop().split(' entries')[0];
@@ -351,14 +351,14 @@
                     success: function () {
                         //success message mybe...
 
-                            console.log("cell number > 2000")
-                            ShowQueueMessage();
-                            // hide after 10 seconds
-                            $('#message').delay(10000).fadeOut();
-                    
+                        console.log("cell number > 2000")
+                        ShowQueueMessage();
+                        // hide after 10 seconds
+                        $('#message').delay(10000).fadeOut();
+
                     }
-                });   
-           }
+                });
+            }
         });
 
         function ShowDownloadMessage() {
