--- a/flaskstarter/templates/tasks/table_view.html
+++ b/flaskstarter/templates/tasks/table_view.html
@@ -120,7 +120,7 @@
             </form>
             <div style="margin-top: 10px;">
                 <button class="lightButton" name="show_plot" style="display:inline-block ; margin-right: 15px;"
-                    title='Bar Charts of Cell type, Severity, Days from onset and Outcome' onclick="showSearchPlot()">
+                    title='Bar Charts of cell type, severity, days from onset and outcome' onclick="showSearchPlot()">
                     Show cell count meta
                 </button>
             </div>
@@ -140,7 +140,7 @@
             <div style="margin-top: 10px;">
                 <button class="lightButton" name="show_plot" type="submit"
                     style="display:inline-block; margin-right: 15px;" onclick="showplot()"
-                    title='Select 1 Cell Type & Search before clicking this button'> Show UMAP plot
+                    title='Select 1 sell type & search before clicking this button'> Show UMAP plot
                 </button>
             </div>
         </div>
@@ -502,7 +502,7 @@
             enableFiltering: true,
             enableCaseInsensitiveFiltering: true,
             filterPlaceholder: 'Search for something...',
-            nonSelectedText: 'Cell Type',
+            nonSelectedText: 'Cell type',
             buttonWidth: '150px',
             maxHeight: 450
         });
